--- a/comonad.cabal
+++ b/comonad.cabal
@@ -19,8 +19,6 @@ library
     transformers >= 0.2.2 && < 0.3
 
   exposed-modules:
-    Control.Comonad,
-    Control.Comonad.Zip,
-    Control.Arrow.Cokleisli
+    Control.Comonad
 
   ghc-options: -Wall 
