--- a/comonad.cabal
+++ b/comonad.cabal
@@ -1,6 +1,6 @@
 name:          comonad
 category:      Control, Comonads
-version:       1.1.1.1
+version:       1.1.1.2
 license:       BSD3
 cabal-version: >= 1.6
 license-file:  LICENSE
@@ -9,23 +9,34 @@ maintainer:    Edward A. Kmett <ekmett@gmail.com>
 stability:     provisional
 homepage:      http://github.com/ekmett/comonad/
 copyright:     Copyright (C) 2008-2011 Edward A. Kmett, Copyright (C) 2004-2008 Dave Menendez
-synopsis:      Haskell 98 comonads
-description:   Haskell 98 comonads
+synopsis:      Haskell 98 compatible comonads
+description:   Haskell 98 compatible comonads
 build-type:    Simple
 
 source-repository head
   type: git
   location: git://github.com/ekmett/comonad.git
 
+flag OldTypeable
+  default: False
+  manual: False
+
 library
-  build-depends: 
-    base >= 4 && < 5,
-    transformers >= 0.2.0 && < 0.3,
+  if flag(OldTypeable)
+    build-depends: base >= 4 && < 4.4
+  else
+    build-depends: base >= 4.4 && < 5
+
+  build-depends:
+    transformers >= 0.2.0 && < 0.4,
     containers >= 0.3.0.0 && < 0.5,
     semigroups >= 0.8 && < 0.9
+
+  if flag(OldTypeable)
+    cpp-options: -DOLD_TYPEABLE
 
   exposed-modules:
     Control.Comonad
     Data.Functor.Extend
 
-  ghc-options: -Wall 
+  ghc-options: -Wall
