--- a/comonad.cabal
+++ b/comonad.cabal
@@ -1,6 +1,6 @@
 name:          comonad
 category:      Control, Comonads
-version:       1.1.3
+version:       2.0
 license:       BSD3
 cabal-version: >= 1.6
 license-file:  LICENSE
@@ -26,11 +26,9 @@ library
   build-depends:
     base         >= 4       && < 5,
     transformers >= 0.2     && < 0.4,
-    containers   >= 0.3     && < 0.6,
-    semigroups   >= 0.8.3.1 && < 0.9
+    containers   >= 0.3     && < 0.6
 
   exposed-modules:
     Control.Comonad
-    Data.Functor.Extend
 
   ghc-options: -Wall
