--- a/comonad.cabal
+++ b/comonad.cabal
@@ -1,6 +1,6 @@
 name:          comonad
 category:      Control, Comonads
-version:       3.0.1
+version:       3.1.0
 license:       BSD3
 cabal-version: >= 1.6
 license-file:  LICENSE
@@ -27,9 +27,11 @@ library
     base         >= 4       && < 5,
     transformers >= 0.2     && < 0.4,
     containers   >= 0.3     && < 0.6,
-    semigroups   >= 0.8.3   && < 0.9
+    semigroups   >= 0.8.3   && < 0.9.1,
+    array        >= 0.1
 
   exposed-modules:
     Control.Comonad
+    Data.Array.Pointed
 
   ghc-options: -Wall
