--- a/comonad.cabal
+++ b/comonad.cabal
@@ -1,6 +1,6 @@
 name:          comonad
 category:      Control, Comonads
-version:       3.0.3
+version:       3.1
 license:       BSD3
 cabal-version: >= 1.10
 license-file:  LICENSE
@@ -39,7 +39,8 @@ library
     base         >= 4       && < 5,
     transformers >= 0.2     && < 0.4,
     containers   >= 0.3     && < 0.6,
-    semigroups   >= 0.8.3   && < 1
+    semigroups   >= 0.8.3   && < 1,
+    tagged       >= 0.1     && < 1
 
   exposed-modules:
     Control.Comonad
