--- a/comonad.cabal
+++ b/comonad.cabal
@@ -1,6 +1,6 @@
 name:          comonad
 category:      Control, Comonads
-version:       3.1
+version:       3.2
 license:       BSD3
 cabal-version: >= 1.10
 license-file:  LICENSE
@@ -15,8 +15,11 @@ synopsis:      Haskell 98 compatible comonads
 description:   Haskell 98 compatible comonads
 build-type:    Custom
 extra-source-files:
+  .ghci
   .gitignore
   .travis.yml
+  .vim.custom
+  coq/Store.v
   README.markdown
   CHANGELOG.markdown
   examples/History.hs
@@ -36,14 +39,26 @@ library
   other-extensions: CPP
 
   build-depends:
-    base         >= 4       && < 5,
-    transformers >= 0.2     && < 0.4,
-    containers   >= 0.3     && < 0.6,
-    semigroups   >= 0.8.3   && < 1,
-    tagged       >= 0.1     && < 1
+    base          >= 4       && < 5,
+    containers    >= 0.3     && < 0.6,
+    contravariant >= 0.2.0.1 && < 1,
+    distributive  >= 0.2.2   && < 1,
+    semigroups    >= 0.8.3.1 && < 1,
+    tagged        >= 0.1     && < 1,
+    transformers  >= 0.2     && < 0.4
 
   exposed-modules:
     Control.Comonad
+    Control.Comonad.Hoist.Class
+    Control.Comonad.Trans.Class
+    Control.Comonad.Trans.Env
+    Control.Comonad.Trans.Identity
+    Control.Comonad.Trans.Store
+    Control.Comonad.Trans.Traced
+    Data.Functor.Coproduct
+    Data.Functor.Composition
+
+  extensions: CPP
 
   ghc-options: -Wall
 
@@ -65,4 +80,3 @@ test-suite doctests
 
   if impl(ghc<7.6.1)
     ghc-options: -Werror
-
