Removed unpackaged modules. Fixed doctest suite

--- a/comonad.cabal
+++ b/comonad.cabal
@@ -58,7 +58,7 @@ library
     Data.Functor.Coproduct
     Data.Functor.Composition
 
-  extensions: CPP
+  default-extensions: CPP
 
   ghc-options: -Wall
 
