Don't claim to be 98

--- a/comonad.cabal
+++ b/comonad.cabal
@@ -11,8 +11,8 @@ homepage:      http://github.com/ekmett/comonad/
 bug-reports:   http://github.com/ekmett/comonad/issues
 copyright:     Copyright (C) 2008-2013 Edward A. Kmett,
                Copyright (C) 2004-2008 Dave Menendez
-synopsis:      Haskell 98 compatible comonads
-description:   Haskell 98 compatible comonads
+synopsis:      Comonads
+description:   Comonads
 build-type:    Custom
 extra-source-files:
   .ghci
