silence HLint warnings we don't want to listen to

--- a/comonad.cabal
+++ b/comonad.cabal
@@ -23,6 +23,7 @@ extra-source-files:
   README.markdown
   CHANGELOG.markdown
   examples/History.hs
+  HLint.hs
 
 -- You can disable the doctests test suite with -f-test-doctests
 flag test-doctests
