Added flags for containers, contravariant and distributive

--- a/comonad.cabal
+++ b/comonad.cabal
@@ -30,6 +30,37 @@ flag test-doctests
   default: True
   manual: True
 
+flag containers
+  description:
+    You can disable the use of the `containers` package using `-f-containers`.
+    .
+    Disabing this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
+  default: True
+  manual: True
+
+flag contravariant
+  description:
+    You can disable the use of the `contravariant` package using `-f-contravariant`.
+    .
+    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
+    .
+    If disabled we will not supply instances of `Contravariant`
+    .
+  default: True
+  manual: True
+
+flag distributive
+  description:
+    You can disable the use of the `distributive` package using `-f-distributive`.
+    .
+    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
+    .
+    If disabled we will not supply instances of `Distributive`
+    .
+  default: True
+  manual: True
+
+
 source-repository head
   type: git
   location: git://github.com/ekmett/comonad.git
@@ -42,12 +73,18 @@ library
 
   build-depends:
     base          >= 4       && < 5,
-    containers    >= 0.3     && < 0.6,
-    contravariant >= 0.2.0.1 && < 1,
-    distributive  >= 0.2.2   && < 1,
     semigroups    >= 0.8.3.1 && < 1,
     tagged        >= 0.1     && < 1,
     transformers  >= 0.2     && < 0.5
+
+  if flag(containers)
+    build-depends: containers >= 0.3 && < 0.6
+
+  if flag(contravariant)
+    build-depends: contravariant >= 0.2.0.1 && < 1 
+
+  if flag(distributive)
+    build-depends: distributive >= 0.2.2   && < 1 
 
   exposed-modules:
     Control.Comonad
