--- a/comonad.cabal
+++ b/comonad.cabal
@@ -72,10 +72,11 @@ library
   ghc-options: -Wall
 
   build-depends:
-    base          >= 4       && < 5,
-    semigroups    >= 0.8.3.1 && < 1,
-    tagged        >= 0.1     && < 1,
-    transformers  >= 0.2     && < 0.5
+    base                >= 4       && < 5,
+    semigroups          >= 0.8.3.1 && < 1,
+    tagged              >= 0.1     && < 1,
+    transformers        >= 0.2     && < 0.5
+    transformers-compat >= 0.3     && < 1
 
   if flag(containers)
     build-depends: containers >= 0.3 && < 0.6
