--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ install:
 script:
  - cabal configure -v2 --enable-tests
  - cabal build
+ - cabal test --show-details=always
  - cabal check
  - cabal sdist
  - export SRC_TGZ=$(cabal info . | awk '{print $2 ".tar.gz";exit}') ;
