--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 env:
- - GHCVER=7.0.1 CABALVER=1.18
  - GHCVER=7.0.4 CABALVER=1.18
  - GHCVER=7.2.2 CABALVER=1.18
  - GHCVER=7.4.2 CABALVER=1.18
@@ -21,8 +20,7 @@ before_install:
 
 install:
  - travis_retry cabal update
- - ghc-pkg expose binary # It's hidden on old GHCs, for some reason
- - cabal install Cabal # Workaround for https://github.com/haskell/cabal/issues/1666
+ - cabal install binary Cabal # Workaround for https://github.com/haskell/cabal/issues/1666
  - cabal install --enable-tests --only-dependencies
 
 script:
