--- a/comonad.cabal
+++ b/comonad.cabal
@@ -1,6 +1,6 @@
 name:          comonad
 category:      Control, Comonads
-version:       4.2.7.1
+version:       4.2.7.2
 license:       BSD3
 cabal-version: >= 1.10
 license-file:  LICENSE
@@ -69,7 +69,6 @@ source-repository head
 library
   hs-source-dirs: src
   default-language: Haskell2010
-  other-extensions: CPP
   ghc-options: -Wall
 
   build-depends:
@@ -106,8 +105,8 @@ library
     Data.Functor.Composition
     Data.Functor.Coproduct
 
-  default-extensions: CPP
   other-extensions:
+    CPP
     RankNTypes
     MultiParamTypeClasses
     FunctionalDependencies
