--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,15 @@ env:
  - GHCVER=7.6.3 CABALVER=1.18
  - GHCVER=7.8.4 CABALVER=1.18
  - GHCVER=7.10.2 CABALVER=1.22
- - GHCVER=head CABALVER=1.22
+ - GHCVER=8.0.1 CABALVER=1.24
+ - GHCVER=head CABALVER=1.24
 
 matrix:
   allow_failures:
    - env: GHCVER=7.0.1 CABALVER=1.18
    - env: GHCVER=7.0.4 CABALVER=1.18
    - env: GHCVER=7.2.2 CABALVER=1.18
-   - env: GHCVER=head CABALVER=1.22
+   - env: GHCVER=head CABALVER=1.24
 
 before_install:
  - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
