--- a/comonad.cabal
+++ b/comonad.cabal
@@ -119,7 +119,7 @@ test-suite doctests
   ghc-options:    -Wall -threaded
   hs-source-dirs: tests
 
-  if !flag(test-doctests)
+  if !flag(test-doctests) || impl(ghc>=8)
     buildable: False
   else
     build-depends:
