--- a/comonad.cabal
+++ b/comonad.cabal
@@ -85,7 +85,7 @@ library
     build-depends: contravariant >= 0.2.0.1 && < 2
 
   if flag(distributive)
-    build-depends: distributive >= 0.2.2   && < 1 
+    build-depends: distributive >= 0.2.2   && < 1
 
   exposed-modules:
     Control.Comonad
@@ -119,7 +119,7 @@ test-suite doctests
   ghc-options:    -Wall -threaded
   hs-source-dirs: tests
 
-  if !flag(test-doctests) || impl(ghc>=8)
+  if !flag(test-doctests)
     buildable: False
   else
     build-depends:
