Use cabal-doctest in Setup.hs
This upgrades the `Setup.hs` harness to use `cabal-doctest`, making it
compatible with `Cabal-1.25` (shipped with GHC 8.2). See
https://github.com/ekmett/lens/issues/709

--- a/comonad.cabal
+++ b/comonad.cabal
@@ -26,6 +26,12 @@ extra-source-files:
   examples/History.hs
   HLint.hs
 
+custom-setup
+  setup-depends:
+    base          >= 4 && < 5,
+    Cabal,
+    cabal-doctest >= 1 && < 1.1
+
 -- You can disable the doctests test suite with -f-test-doctests
 flag test-doctests
   default: True
@@ -124,6 +130,4 @@ test-suite doctests
   else
     build-depends:
       base,
-      directory      >= 1.0,
-      doctest        >= 0.9.10,
-      filepath
+      doctest >= 0.11.1 && < 0.12
