--- a/comonad.cabal
+++ b/comonad.cabal
@@ -131,4 +131,5 @@ test-suite doctests
   else
     build-depends:
       base,
-      doctest >= 0.11.1 && < 0.12
+      comonad,
+      doctest >= 0.11.1 && < 0.13
