--- a/comonad.cabal
+++ b/comonad.cabal
@@ -1,6 +1,6 @@
 name:          comonad
 category:      Control, Comonads
-version:       5.0.6
+version:       5.0.7
 license:       BSD3
 cabal-version: >= 1.10
 license-file:  LICENSE
@@ -68,6 +68,17 @@ flag distributive
   default: True
   manual: True
 
+flag indexed-traversable
+  description:
+    You can disable the use of the `indexed-traversable` package using `-f-indexed-traversable`.
+    .
+    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
+    .
+    If disabled we will not supply instances of `FunctorWithIndex`
+    .
+  default: True
+  manual: True
+
 
 source-repository head
   type: git
@@ -92,6 +103,9 @@ library
 
   if flag(distributive)
     build-depends: distributive >= 0.2.2   && < 1
+
+  if flag(indexed-traversable)
+    build-depends: indexed-traversable >= 0.1 && < 0.2
 
   exposed-modules:
     Control.Comonad
