--- a/comonad.cabal
+++ b/comonad.cabal
@@ -1,6 +1,6 @@
 name:          comonad
 category:      Control, Comonads
-version:       5.0.7
+version:       5.0.8
 license:       BSD3
 cabal-version: >= 1.10
 license-file:  LICENSE
@@ -13,7 +13,7 @@ copyright:     Copyright (C) 2008-2014 Edward A. Kmett,
                Copyright (C) 2004-2008 Dave Menendez
 synopsis:      Comonads
 description:   Comonads.
-build-type:    Custom
+build-type:    Simple
 tested-with:   GHC == 7.0.4
              , GHC == 7.2.2
              , GHC == 7.4.2
@@ -34,18 +34,6 @@ extra-source-files:
   README.markdown
   CHANGELOG.markdown
   examples/History.hs
-  Warning.hs
-
-custom-setup
-  setup-depends:
-    base          >= 4 && < 5,
-    Cabal,
-    cabal-doctest >= 1 && < 1.1
-
--- You can disable the doctests test suite with -f-test-doctests
-flag test-doctests
-  default: True
-  manual: True
 
 flag containers
   description:
@@ -134,18 +122,3 @@ library
     FunctionalDependencies
     FlexibleInstances
     UndecidableInstances
-
-test-suite doctests
-  type:           exitcode-stdio-1.0
-  default-language: Haskell2010
-  main-is:        doctests.hs
-  ghc-options:    -Wall -threaded
-  hs-source-dirs: tests
-
-  if !flag(test-doctests)
-    buildable: False
-  else
-    build-depends:
-      base,
-      comonad,
-      doctest >= 0.11.1 && < 0.18
