Generic1, cleanup, modernize style partially

--- a/comonad.cabal
+++ b/comonad.cabal
@@ -91,6 +91,7 @@ library
     CPP
     DefaultSignatures
     DeriveDataTypeable
+    DeriveGeneric
     FlexibleContexts
     FlexibleInstances
     FunctionalDependencies
